--- a/style.css
+++ b/style.css
@@ -28,12 +28,12 @@ body {
     width: calc(100% - 120px);
     max-width: 1100px;
     justify-content: space-between;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     background: hsl(244, 38%, 16%);
 }
 
 .card-block {
-    margin: 60px;
+    margin: 70px;
     max-width: 380px;
     display: flex;
     flex-direction: column;
@@ -62,7 +62,7 @@ body {
     text-transform: uppercase;
     justify-content: space-between;
     max-width: 340px;
-    margin-top: 2rem; 
+    margin-top: 1rem; 
 }
 
 .stats-numbers {
@@ -82,99 +82,78 @@ body {
     position: relative;
     display: flex;
     background: hsl(277, 64%, 61%);
-    border-radius: 0 1rem 1rem 0;
+    border-radius: 0 0.5rem 0.5rem 0;
+}
+
+.card-image img {
+    mix-blend-mode: multiply;
+    opacity: 0.75;
 }
 
 .img-desktop {
-    mix-blend-mode: multiply;
-    opacity: 0.75;
-    border-radius: 0 1rem 1rem 0;
+    border-radius: 0 0.5rem 0.5rem 0;
 }
 
 .img-mobile {
     display: none;
 }
-@media (max-width: 1091px) {
-    .card-block {
-        margin: 40px;
-    }
-}
 
-@media (max-width: 1004px) {
+@media (max-width: 1111px) {
     .container {
         margin: 60px 0;
     }
 
     .card {
         flex-direction: column-reverse;
-        width: 100%;
-        max-width: 600px;
+        width: auto;
+        max-width: calc(100% - 60px);
     }
 
-    .card-block {
-        max-width: fit-content;
-        align-items: center;
-        text-align: center;
-    }
-    
     .card-stats {
-        justify-content: center;
-        /* margin: 0; */
+        max-width: 100%;
+        flex-direction: column;
     }
-    .stat-block {
-        margin-top: 60px;
-        padding: 0 60px;
+
+    .stats-block {
+        margin-top: 2rem;
     }
 
     .card-image {
-        border-radius: 1rem 1rem 0 0;
+        border-radius: 0.5rem 0.5rem 0 0;        
     }
-    
-    .img-desktop {
-        border-radius: 1rem 1rem 0 0;
-        width: 100%;
-    }
-}
-
-@media (max-width: 900px) {
 
     .img-desktop {
         display: none;
     }
 
     .img-mobile {
-        display: block;
-        mix-blend-mode: multiply;
-        opacity: 0.75;
-        border-radius: 1rem 1rem 0 0;
         width: 100%;
-    }
-}
-
-@media (max-width: 660px) {
-    .card {
-        max-width: calc(100% - 60px);
-    }
-}
-
-@media (max-width: 450px) {
-    html {
-        font-size: 12px;
-    }
-
-    .card {
-        max-width: calc(100% - 40px);
-    }
-
-    .container {
-        margin: 60px 0;
+        border-radius: 0.5rem 0.5rem 0 0;
+        display: block;
     }
 
     .card-block {
-        margin: 30px;
+        max-width: fit-content;
+        text-align: center;
+    }
+}
+
+@media (max-width: 489px) {
+    .card {
+        max-width: calc(100% - 30px);
     }
 
-    .stat-block {
-        margin-top: 30px;
+    .card-block {
+        margin: 40px
+    }
+}
+
+@media (max-width: 375px) {
+    html {
+        font-size: 75%;
+    }
+
+    .card-block {
+        margin: 40px 30px;
     }
 }
